--- a/lab-04-rbac/manifestK8s/laravel-deployment.yaml
+++ b/lab-04-rbac/manifestK8s/laravel-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: laravel
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -12,6 +13,7 @@ spec:
       labels:
         app: laravel
     spec:
+      serviceAccountName: laravel-sa
       containers:
       - name: laravel
         image: backend-laravel:v1
