--- a/lab-04-rbac/manifestK8s/mysql-deployment.yaml
+++ b/lab-04-rbac/manifestK8s/mysql-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: dev
 spec:
   replicas: 1
   selector:
@@ -12,6 +13,7 @@ spec:
       labels:
         app: mysql
     spec:
+      serviceAccountName: mysql-sa
       containers:
       - name: mysql
         image: mysql:8.0
